--- a/_posts/0000-01-01-intro.md
+++ b/_posts/0000-01-01-intro.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our slide deck!"
+title: "Welcome to our first slide!"
 ---
-
-Use the right arrow to begin!
+Your text
+Use the right arrow to go forward!
